Replace SVG logo with actual MASTER LIVEABOARDS logo image from Picture folder

--- a/index.html
+++ b/index.html
@@ -11,18 +11,7 @@
         <div class="form-wrapper">
             <div class="form-header">
                 <div class="logo-container">
-                    <div class="logo-icon">
-                        <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M50 10 L30 40 L70 40 Z" fill="#FFD700" stroke="#FFD700" stroke-width="2"/>
-                            <circle cx="50" cy="45" r="8" fill="#FFD700"/>
-                            <path d="M50 53 L45 70 L55 70 Z" fill="#FFD700"/>
-                            <path d="M50 20 L50 50" stroke="#FFD700" stroke-width="3"/>
-                        </svg>
-                    </div>
-                    <div class="logo-text">
-                        <h1 class="logo-title">MASTER</h1>
-                        <h2 class="logo-subtitle">LIVEABOARDS</h2>
-                    </div>
+                    <img src="Picture/ML-Primary-Logo-NAVY-BACKGROUND-rgb.jpg" alt="MASTER LIVEABOARDS Logo" class="logo-image">
                 </div>
                 <h3 class="form-title">Vessel Maintenance Request Form</h3>
                 <p>Please fill out the form below to submit your maintenance request</p>
