Add header title and Google Sheets setup guide in Thai

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <div class="logo-container">
                     <img src="Picture/ML-Primary-Logo-NAVY-BACKGROUND-rgb.jpg" alt="MASTER LIVEABOARDS Logo" class="logo-image">
                 </div>
+                <h1 class="app-title">Vessels Maintenance App Request</h1>
             </div>
 
             <form id="maintenanceForm">
