Fix radio button grouping: each task now has separate frequency type selection

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                                 <div class="form-row">
                                     <div class="form-group">
                                         <label>Frequency Type <span class="required">*</span></label>
-                                        <div class="button-group">
-                                            <input type="radio" name="frequencyType[]" id="freqTypeDays0" value="Days" required class="frequency-type-radio">
+                                        <div class="button-group" data-task-group="0">
+                                            <input type="radio" name="frequencyType[0]" id="freqTypeDays0" value="Days" required class="frequency-type-radio">
                                             <label for="freqTypeDays0" class="button-option">Days</label>
-                                            <input type="radio" name="frequencyType[]" id="freqTypeHours0" value="Hours" required class="frequency-type-radio">
+                                            <input type="radio" name="frequencyType[0]" id="freqTypeHours0" value="Hours" required class="frequency-type-radio">
                                             <label for="freqTypeHours0" class="button-option">Hours</label>
                                         </div>
                                     </div>
