--- a/admin.html
+++ b/admin.html
@@ -28,6 +28,7 @@
                     <option value="Approved">Approved</option>
                     <option value="Rejected">Rejected</option>
                     <option value="Completed">Completed</option>
+                    <option value="Done">Done</option>
                 </select>
             </div>
         </div>
