Fix EngineType to System in form, hide Engine Type in admin

--- a/index.html
+++ b/index.html
@@ -47,15 +47,7 @@
                         <input type="text" id="engineName" name="engineName" required placeholder="e.g. Main Engine No.1, Generator Set A">
                     </div>
 
-                    <div class="form-group">
-                        <label>Engine Type <span class="required">*</span></label>
-                        <div class="button-group">
-                            <input type="radio" id="engineTypeSystem" name="engineType" value="System" required>
-                            <label for="engineTypeSystem" class="button-option">System</label>
-                            <input type="radio" id="engineTypeInspection" name="engineType" value="Inspection" required>
-                            <label for="engineTypeInspection" class="button-option">Inspection</label>
-                        </div>
-                    </div>
+                    <input type="hidden" name="engineType" value="System">
 
                     <div class="form-group">
                         <label>Counting By <span class="required">*</span></label>
